# R-tree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst
.github/workflows/: ci.yml
include/: rtree.hpp
src/: rtree.cpp
tests/: test_rect.cpp
